# rss-qb

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: docker.yml
.sqlx/: query-03e602db4a61dfa2929f1eeb327cbbafd4a0af8513b0c68c86102c69deebd79c.json  query-2b27fd445cac78ed355907613daf0424990bc266acf94509615a2e3056025165.json  query-3a4ca705618009b3322d3b76988aecb044a97a7d13d0350bb4e7dbcfb9a804d2.json  query-4330fd00f8283d1a9ed004890cc32fb74a89c7771c5cee209d988d6dd665d540.json  query-568af67aceaaa4e489d784e86ca9ff391898ddc57acf08d931bf36f9f7530fe2.json  query-7de256f1769079ac9e126630d1082597a548367d8044adc3a9410011d8898388.json  query-8cd8b8d8ee0492d815aff2f61c7b6d37db89ec9a81f647dbe36b6fea87105ec3.json  query-98a8c0adc90b5dbb96076e9734167bdbe363232799aeb993fb8027822851f0ab.json  query-fddfe6cdb88ff6de101c6310242482d2c8ec0164d5be539357de3db2bf724e7c.json
migrations/: 20220501034636_init.down.sql  20220501034636_init.up.sql  20220509112249_add_series.down.sql  20220509112249_add_series.up.sql  20240306120349_tmdb_lookup.down.sql  20240306120349_tmdb_lookup.up.sql  20240306133539_torrent_info.down.sql  20240306133539_torrent_info.up.sql
piratebay/: Cargo.toml
piratebay/src/: lib.rs
piratebay/tests/: search-result.html
src/: client.rs  config.rs  db.rs  gpt.rs  lib.rs  main.rs  prompt.txt  request.rs  runner.rs  series.rs  server.rs  tmdb.rs
src/db/: ep.rs  item.rs  mod.rs  tmdb.rs  torrent_info.rs
src/qb/: client.rs  mod.rs  request.rs
src/runner/: mod.rs  rss_.rs
templates/: config.toml
